# vulkan-quick

./: .gitignore  .gitmodules  CMakeLists.txt  VulkanTemplate.cpp  VulkanTemplate.h  copyResources.cmake
Helpers/: CMakeLists.txt
Helpers/include/: Application.h  Buffer.h  Camera.h  GraphicsPipeline.h  Image.h  MainLoop.h  Model.h  RenderPass.h  Scene.h  Shader.h  ShadowMap.h  Texture.h  VarianceShadowMap.h
Helpers/src/: Application.cpp  Buffer.cpp  Camera.cpp  GraphicsPipeline.cpp  Image.cpp  MainLoop.cpp  Model.cpp  RenderPass.cpp  Scene.cpp  Shader.cpp  ShadowMap.cpp  Texture.cpp  VarianceShadowMap.cpp
Projects/RotatingTriangleBindless/: CMakeLists.txt  main.cpp
Projects/RotatingTriangleWithCamera/: CMakeLists.txt  main.cpp
Projects/RotatingTriangleWithDepth/: CMakeLists.txt  main.cpp
Projects/RotatingTriangleWithTextures/: CMakeLists.txt  main.cpp
Projects/RotatingTriangleWithUniformBuffers/: CMakeLists.txt  main.cpp
Projects/TrashGod/: CMakeLists.txt  main.cpp
Projects/TrashGod/shaders/: common.h  sat.comp  satPopulation.comp  shadow.frag  shadow.vert  triangle.frag  triangle.vert  varianceShadow.frag  varianceShadow.vert
Projects/Triangle/: CMakeLists.txt  Triangle.cpp  main.cpp
Projects/TriangleWithVertexBuffers/: CMakeLists.txt  main.cpp
Triangle/: CMakeLists.txt  main.cpp
